tests/ui/parser/issues/issue-8537.stderr
error[E0703]: invalid ABI: found `invalid-ab_isize`
  --> $DIR/issue-8537.rs:2:3
   |
LL |   "invalid-ab_isize"
   |   ^^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = note: invoke `crablangc --print=calling-conventions` for a full list of supported calling conventions.

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0703`.
